# CSOPESY_Emulator

./: .gitignore  CMakeLists.txt  CPUWorker.cpp  CPUWorker.h  OSEmulator.cpp  OSEmulator.h  Process.cpp  Process.h  ProcessScheduler.cpp  ProcessScheduler.h  README.txt  README_QUATTRO.txt  UML_diagram.drawio  Untitled Diagram.drawio  configManager.cpp  configManager.h  quattro.cpp
Command/: ACommand.cpp  ACommand.h  AddCommand.cpp  AddCommand.h  DeclareCommand.cpp  DeclareCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h  SubtractCommand.h
Console/: AConsole.cpp  AConsole.h  MainMenuConsole.cpp  MainMenuConsole.h  MarqueeConsole.cpp  MarqueeConsole.h  MemorySimulationConsole.cpp  MemorySimulationConsole.h  SchedulingConsole.cpp  SchedulingConsole.h
Instruction/: AInstruction.cpp  AInstruction.h  AddCommand.cpp  AddCommand.h  DeclareCommand.cpp  DeclareCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h  SubtractCommand.cpp  SubtractCommand.h
OSEmulator/: ACommand.h  AConsole.h  CPUWorker.cpp  ConsoleManager.cpp  ConsoleManager.h  MainMenuConsole.cpp  MainMenuConsole.h  OSEmulator.slnx  OSEmulator.vcxproj  OSEmulator.vcxproj.filters  PrintCommand.cpp  PrintCommand.h  Process.cpp  Process.h  ProcessConsole.cpp  ProcessConsole.h  ProcessScheduler.cpp  ProcessScheduler.h  SleepCommand.cpp  SleepCommand.h  SubtractCommand.cpp  SubtractCommand.h  UpgradeLog.htm  config.txt  csopesy-log.txt  main.cpp
OSEmulator/OSEmulator/x64/Debug/: OSEmulator.exe.recipe  mainmenuconsole.obj.enc  vc145.idb
OSEmulator/OSEmulator/x64/Debug/OSEmulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OSEmulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
